Feature/UI unnecessary and additional (#125)
* api trả về số lượng users, stations, bikes và sửa landing header lấy data từ db và chỉnh smmoth khi nhấn vào chữ tìm hiểu thêm

* api trả về tên của các trạm và hiện thị lại lên UI của landing station và thay đổi nội dung của landing-feature

* lấy thông tin chính xác của các trạm cho page và 2 swaggerUI api

* cập nhật thông tin cho trang contact và có gửi về mail của người gửi và mail fpt của nguyên

* lint fix

* lint:fix

* lint fix run build
