# apps/backend/src/server.ts
@@ -25,6 +25,7 @@ import { warningExpiryReservation } from "./utils/cron/email.services";
 import ratingRouter from './routes/rating.routes'
 import { initQueue } from './lib/queue'
 import sosRouter from './routes/sos.routes'
+import dashboardRouter from './routes/dashboard.routes'
 
 const port = process.env.PORT || 4000
 
@@ -61,6 +62,7 @@ app.use('/stations', stationRouter)
 app.use('/reservations', reserveRouter)
 app.use('/ratings', ratingRouter)
 app.use('/sos', sosRouter)
+app.use('/dashboard', dashboardRouter)
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
